fixed to reviews spacing and stars

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -279,7 +279,7 @@ ion-popover-view.fit ion-content {
   color: white; }
 
 .card-slides > ion-slides {
-  height: 20vh !important; }
+  height: 30vh !important; }
 
 .img-slides > ion-slides {
   height: 40vh !important; }
@@ -458,10 +458,12 @@ body {
   justify-content: center; }
 
 .rate-stars i.full {
-  color: green; }
+  color: black;
+  padding: 0 !important; }
 
 .rate-stars i.off {
-  color: #000; }
+  color: grey;
+  padding: 0 !important; }
 
 .gallery-view .image-container {
   position: relative;
